Clean up BrokerRequestHandler and BrokerResponse (#13179)