@@ -18,9 +18,6 @@
  */
 package org.apache.pinot.broker.requesthandler;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableMap;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -28,8 +25,6 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import javax.annotation.Nullable;
-import javax.ws.rs.core.HttpHeaders;
-import javax.ws.rs.core.MultivaluedHashMap;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.helix.model.InstanceConfig;
 import org.apache.pinot.broker.broker.AllowAllAccessControlFactory;
@@ -46,11 +41,10 @@ import org.apache.pinot.core.transport.ServerInstance;
 import org.apache.pinot.spi.config.table.TableConfig;
 import org.apache.pinot.spi.config.table.TenantConfig;
 import org.apache.pinot.spi.env.PinotConfiguration;
+import org.apache.pinot.spi.eventlistener.query.BrokerQueryEventListenerFactory;
 import org.apache.pinot.spi.exception.BadQueryRequestException;
-import org.apache.pinot.spi.metrics.PinotMetricUtils;
 import org.apache.pinot.spi.trace.RequestContext;
-import org.apache.pinot.spi.trace.Tracing;
-import org.apache.pinot.spi.utils.JsonUtils;
+import org.apache.pinot.spi.utils.CommonConstants.Broker;
 import org.apache.pinot.sql.parsers.CalciteSqlParser;
 import org.apache.pinot.util.TestUtils;
 import org.mockito.Mockito;
@@ -63,15 +57,15 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 
-public class BaseBrokerRequestHandlerTest {
+public class BaseSingleStageBrokerRequestHandlerTest {
 
   @Test
   public void testUpdateColumnNames() {
     String query = "SELECT database.my_table.column_name_1st, column_name_2nd from database.my_table";
     PinotQuery pinotQuery = CalciteSqlParser.compileToPinotQuery(query);
     Map<String, String> columnNameMap =
-        ImmutableMap.of("column_name_1st", "column_name_1st", "column_name_2nd", "column_name_2nd");
-    BaseBrokerRequestHandler.updateColumnNames("database.my_table", pinotQuery, false, columnNameMap);
+        Map.of("column_name_1st", "column_name_1st", "column_name_2nd", "column_name_2nd");
+    BaseSingleStageBrokerRequestHandler.updateColumnNames("database.my_table", pinotQuery, false, columnNameMap);
     Assert.assertEquals(pinotQuery.getSelectList().size(), 2);
     for (Expression expression : pinotQuery.getSelectList()) {
       String columnName = expression.getIdentifier().getName();
@@ -90,17 +84,18 @@ public class BaseBrokerRequestHandlerTest {
     Map<String, String> columnNameMap = new HashMap<>();
     columnNameMap.put("student_name", "student_name");
     String actualColumnName =
-        BaseBrokerRequestHandler.getActualColumnName("mytable", "mytable.student_name", columnNameMap, false);
+        BaseSingleStageBrokerRequestHandler.getActualColumnName("mytable", "mytable.student_name", columnNameMap,
+            false);
     Assert.assertEquals(actualColumnName, "student_name");
     Assert.assertEquals(
-        BaseBrokerRequestHandler.getActualColumnName("db1.mytable", "db1.mytable.student_name", columnNameMap, false),
-        "student_name");
+        BaseSingleStageBrokerRequestHandler.getActualColumnName("db1.mytable", "db1.mytable.student_name",
+            columnNameMap, false), "student_name");
     Assert.assertEquals(
-        BaseBrokerRequestHandler.getActualColumnName("db1.mytable", "mytable.student_name", columnNameMap, false),
-        "student_name");
+        BaseSingleStageBrokerRequestHandler.getActualColumnName("db1.mytable", "mytable.student_name", columnNameMap,
+            false), "student_name");
     boolean exceptionThrown = false;
     try {
-      BaseBrokerRequestHandler.getActualColumnName("mytable", "mytable2.student_name", columnNameMap, false);
+      BaseSingleStageBrokerRequestHandler.getActualColumnName("mytable", "mytable2.student_name", columnNameMap, false);
       Assert.fail("should throw exception if column is not known");
     } catch (BadQueryRequestException ex) {
       exceptionThrown = true;
@@ -108,7 +103,7 @@ public class BaseBrokerRequestHandlerTest {
     Assert.assertTrue(exceptionThrown, "should throw exception if column is not known");
     exceptionThrown = false;
     try {
-      BaseBrokerRequestHandler.getActualColumnName("mytable", "MYTABLE.student_name", columnNameMap, false);
+      BaseSingleStageBrokerRequestHandler.getActualColumnName("mytable", "MYTABLE.student_name", columnNameMap, false);
       Assert.fail("should throw exception if case sensitive and table name different");
     } catch (BadQueryRequestException ex) {
       exceptionThrown = true;
@@ -116,12 +111,13 @@ public class BaseBrokerRequestHandlerTest {
     Assert.assertTrue(exceptionThrown, "should throw exception if column is not known");
     columnNameMap.put("mytable_student_name", "mytable_student_name");
     String wrongColumnName2 =
-        BaseBrokerRequestHandler.getActualColumnName("mytable", "mytable_student_name", columnNameMap, false);
+        BaseSingleStageBrokerRequestHandler.getActualColumnName("mytable", "mytable_student_name", columnNameMap,
+            false);
     Assert.assertEquals(wrongColumnName2, "mytable_student_name");
 
     columnNameMap.put("mytable", "mytable");
     String wrongColumnName3 =
-        BaseBrokerRequestHandler.getActualColumnName("mytable", "mytable", columnNameMap, false);
+        BaseSingleStageBrokerRequestHandler.getActualColumnName("mytable", "mytable", columnNameMap, false);
     Assert.assertEquals(wrongColumnName3, "mytable");
   }
 
@@ -130,17 +126,17 @@ public class BaseBrokerRequestHandlerTest {
     Map<String, String> columnNameMap = new HashMap<>();
     columnNameMap.put("student_name", "student_name");
     String actualColumnName =
-        BaseBrokerRequestHandler.getActualColumnName("mytable", "MYTABLE.student_name", columnNameMap, true);
+        BaseSingleStageBrokerRequestHandler.getActualColumnName("mytable", "MYTABLE.student_name", columnNameMap, true);
     Assert.assertEquals(actualColumnName, "student_name");
     Assert.assertEquals(
-        BaseBrokerRequestHandler.getActualColumnName("db1.MYTABLE", "DB1.mytable.student_name", columnNameMap, true),
-        "student_name");
+        BaseSingleStageBrokerRequestHandler.getActualColumnName("db1.MYTABLE", "DB1.mytable.student_name",
+            columnNameMap, true), "student_name");
     Assert.assertEquals(
-        BaseBrokerRequestHandler.getActualColumnName("db1.mytable", "MYTABLE.student_name", columnNameMap, true),
-        "student_name");
+        BaseSingleStageBrokerRequestHandler.getActualColumnName("db1.mytable", "MYTABLE.student_name", columnNameMap,
+            true), "student_name");
     boolean exceptionThrown = false;
     try {
-      BaseBrokerRequestHandler.getActualColumnName("student", "MYTABLE2.student_name", columnNameMap, true);
+      BaseSingleStageBrokerRequestHandler.getActualColumnName("student", "MYTABLE2.student_name", columnNameMap, true);
       Assert.fail("should throw exception if column is not known");
     } catch (BadQueryRequestException ex) {
       exceptionThrown = true;
@@ -148,47 +144,43 @@ public class BaseBrokerRequestHandlerTest {
     Assert.assertTrue(exceptionThrown, "should throw exception if column is not known");
     columnNameMap.put("mytable_student_name", "mytable_student_name");
     String wrongColumnName2 =
-        BaseBrokerRequestHandler.getActualColumnName("mytable", "MYTABLE_student_name", columnNameMap, true);
+        BaseSingleStageBrokerRequestHandler.getActualColumnName("mytable", "MYTABLE_student_name", columnNameMap, true);
     Assert.assertEquals(wrongColumnName2, "mytable_student_name");
 
     columnNameMap.put("mytable", "mytable");
     String wrongColumnName3 =
-        BaseBrokerRequestHandler.getActualColumnName("MYTABLE", "mytable", columnNameMap, true);
+        BaseSingleStageBrokerRequestHandler.getActualColumnName("MYTABLE", "mytable", columnNameMap, true);
     Assert.assertEquals(wrongColumnName3, "mytable");
   }
 
   @Test
-  public void testCancelQuery()
-      throws Exception {
+  public void testCancelQuery() {
     String tableName = "myTable_OFFLINE";
     // Mock pretty much everything until the query can be submitted.
     TableCache tableCache = mock(TableCache.class);
     TableConfig tableCfg = mock(TableConfig.class);
     when(tableCache.getActualTableName(anyString())).thenReturn(tableName);
-    HttpHeaders headers = mock(HttpHeaders.class);
-    when(headers.getRequestHeaders()).thenReturn(new MultivaluedHashMap<>());
-    when(headers.getHeaderString(anyString())).thenReturn(null);
     TenantConfig tenant = new TenantConfig("tier_BROKER", "tier_SERVER", null);
     when(tableCfg.getTenantConfig()).thenReturn(tenant);
-    when(tableCache.getTableConfig(anyString())).thenReturn(tableCfg);
+    when(tableCache.getTableConfig(tableName)).thenReturn(tableCfg);
     BrokerRoutingManager routingManager = mock(BrokerRoutingManager.class);
-    when(routingManager.routingExists(anyString())).thenReturn(true);
+    when(routingManager.routingExists(tableName)).thenReturn(true);
+    when(routingManager.getQueryTimeoutMs(tableName)).thenReturn(10000L);
     RoutingTable rt = mock(RoutingTable.class);
     when(rt.getServerInstanceToSegmentsMap()).thenReturn(
-        Collections.singletonMap(new ServerInstance(new InstanceConfig("server01_9000")),
-            Pair.of(Collections.singletonList("segment01"), Collections.emptyList())));
+        Map.of(new ServerInstance(new InstanceConfig("server01_9000")), Pair.of(List.of("segment01"), List.of())));
     when(routingManager.getRoutingTable(any(), Mockito.anyLong())).thenReturn(rt);
     QueryQuotaManager queryQuotaManager = mock(QueryQuotaManager.class);
     when(queryQuotaManager.acquire(anyString())).thenReturn(true);
     CountDownLatch latch = new CountDownLatch(1);
-    final long[] testRequestId = {-1};
+    long[] testRequestId = {-1};
+    BrokerMetrics.register(mock(BrokerMetrics.class));
     PinotConfiguration config =
-        new PinotConfiguration(Collections.singletonMap("pinot.broker.enable.query.cancellation", "true"));
-    BaseBrokerRequestHandler requestHandler =
-        new BaseBrokerRequestHandler(config, "testBrokerId", routingManager, new AllowAllAccessControlFactory(),
-            queryQuotaManager, tableCache,
-            new BrokerMetrics("", PinotMetricUtils.getPinotMetricsRegistry(), true,
-                Collections.emptySet()), null) {
+        new PinotConfiguration(Map.of(Broker.CONFIG_OF_BROKER_ENABLE_QUERY_CANCELLATION, "true"));
+    BrokerQueryEventListenerFactory.init(config);
+    BaseSingleStageBrokerRequestHandler requestHandler =
+        new BaseSingleStageBrokerRequestHandler(config, "testBrokerId", routingManager,
+            new AllowAllAccessControlFactory(), queryQuotaManager, tableCache) {
           @Override
           public void start() {
           }
@@ -212,10 +204,7 @@ public class BaseBrokerRequestHandlerTest {
         };
     CompletableFuture.runAsync(() -> {
       try {
-        JsonNode request = JsonUtils.stringToJsonNode(
-            String.format("{\"sql\":\"select * from %s limit 10\",\"queryOptions\":\"timeoutMs=10000\"}", tableName));
-        RequestContext requestStats = Tracing.getTracer().createRequestScope();
-        requestHandler.handleRequest(request, null, requestStats, headers);
+        requestHandler.handleRequest(String.format("select * from %s limit 10", tableName));
       } catch (Exception e) {
         throw new RuntimeException(e);
       }
